# popl2024-artifact

./: .gitignore  Dockerfile  LICENSE  README.md
monoprune/: pyproject.toml
monoprune/src/monoprune/: env.py  interval.py  maxmin_utils.py  misc_utils.py  search_graph.py  stat_metrics.py  torch_intervals.py  type_grammar_tools.py  unique.py
monoprune/src/monoprune/aexpr/: grid_opt.py  interval_opt.py  semantics_concrete.py  semantics_interval.py  semantics_interval_sampling.py  semantics_z3.py  smt_check.py  smt_opt.py  symbolic_syntax.py  syntax.py
monoprune/src/monoprune/crim13_impl_dsl/: semantics.py  syntax.py
monoprune/src/monoprune/crim13_paper_dsl/: enumeration.py  semantics.py  syntax.py
monoprune/src/monoprune/crim13_poly_dsl/: enumeration.py  grammar.py  semantics.py  syntax.py
monoprune/src/monoprune/exp_synth_param/: common.py  crim13_data.py  crim13_exp.py  crim13_sketch.py  dyadic.py  emergency_quivr_sketch.py  interval.py  quivr_data.py  run_exp.py  smt.py
monoprune/src/monoprune/exp_torch/: common.py
monoprune/src/monoprune/quivr_dsl/: binary_semantics.py  enumeration.py  syntax.py
monoprune/src/monoprune/sb/: bfs_exp_crim.py  bfs_exp_quivr.py  bfs_table.py  run_bfs_all.py  run_bfs_exp.py  run_smt_all.py  run_smt_torch.py  smt_exp_crim.py  smt_exp_emergency_quivr.py  smt_plot.py
