[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monoprune"
version = "1.0.0"
requires-python = ">=3.10"
classifiers = []
dependencies = [
    "numpy == 1.24.1",
    "plotly == 5.17.0",
    "pandas == 2.1.1",
    "sortedcontainers == 2.4.0",
    "torch == 2.1.0",
    "jaxtyping == 0.2.22",
    "z3-solver == 4.12.2.0",
    "kaleido == 0.2.1",
]

[tool.mypy]
enable_recursive_aliases = true

[tool.autopep8]
aggressive = 3